custom window style

--- a/WpfBlazor.csproj
+++ b/WpfBlazor.csproj
@@ -10,6 +10,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="H.Tools.Wpf" Version="0.0.27" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebView.Wpf" Version="8.0.82" />
 	</ItemGroup>
 
